# api/resources/public/openapi.yaml
@@ -1770,6 +1770,66 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ProblemDetail'
+  /users/{username}:
+    put:
+      tags:
+        - user
+      operationId: updateUser
+      summary: Update a user
+      description: Updates an existing user.
+      parameters:
+        - name: username
+          in: path
+          description: The username of the user to update
+          required: true
+          schema:
+            type: string
+            maxLength: 80
+            minLength: 1
+      requestBody:
+        description: The user data to update
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+        required: true
+      responses:
+        200:
+          description: User updated successfully.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        304:
+          description: Not modified.
+          headers:
+            ETag:
+              description: An ID for this version of the response.
+              schema:
+                type: string
+        400:
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        404:
+          description: User not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
+        500:
+          description: Server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetail'
 components:
   schemas:
     ProblemDetail:
@@ -2143,6 +2203,12 @@ components:
           description: Indicates if the user is enabled
           type: boolean
           example: true
+        firstName:
+          title: firstName
+          description: The first name of the user
+          type: string
+          maxLength: 30
+          example: John
         roles:
           title: Roles
           description: The roles of an user
