# api/src/com/example/petclinic/api/controllers/UserController.scala
@@ -9,8 +9,12 @@ import ba.sake.sharaf.*, routing.*
 import com.example.petclinic.api.models.*
 
 class UserController {
-  def routes = Routes { case POST -> Path("users") =>
-    val reqBody = Request.current.bodyJsonValidated[User]
-    Response.withStatus(StatusCode.NotImplemented).withBody("TODO: return User")
+  def routes = Routes {
+    case POST -> Path("users") =>
+      val reqBody = Request.current.bodyJsonValidated[User]
+      Response.withStatus(StatusCode.NotImplemented).withBody("TODO: return User")
+    case PUT -> Path("users", username) =>
+      val reqBody = Request.current.bodyJsonValidated[User]
+      Response.withStatus(StatusCode.NotImplemented).withBody("TODO: return updated User")
   }
 }
